--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <link href="https://eduardoanalytics.github.io/eduardohenrique/style.css" rel="stylesheet" />
-    <script> src="https://eduardoanalytics.github.io/eduardohenrique/script.js"></script>
+    <script src="https://eduardoanalytics.github.io/eduardohenrique/script.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
