--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <link href="https://eduardoanalytics.github.io/eduardohenrique/style.css" rel="stylesheet" />
-    <script src="https://eduardoanalytics.github.io/eduardohenrique/script.js"></script>
+    <link href="https://eduardoanalytics.github.io/eduardohenrique/site.css" rel="stylesheet" />
+    <script src="https://eduardoanalytics.github.io/eduardohenrique/main.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
