--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <link href="https://eduardoanalytics.github.io/eduardohenrique/site.css" rel="stylesheet" />
+    <link href="https://eduardoanalytics.github.io/eduardohenrique/style.css" rel="stylesheet" />
     <script src="https://eduardoanalytics.github.io/eduardohenrique/main.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
